# libdict

./: .gitignore  .travis.yml  CMakeLists.txt  GNUmakefile  LICENSE  README  README.md  REFERENCES  TODO  anagram.c  benchmark.c  demo.c  meson.build  test.c  unit_tests.c  util.h  vg
algorithms/: GNUmakefile  avl_insert.tex  empty.tex  treap_insert.tex
include/: dict.h  hashtable.h  hashtable2.h  hb_tree.h  pr_tree.h  rb_tree.h  skiplist.h  sp_tree.h  tr_tree.h  wb_tree.h
src/: CMakeLists.txt  dict.c  dict_private.h  hashtable.c  hashtable2.c  hashtable_common.c  hashtable_common.h  hb_tree.c  pr_tree.c  rb_tree.c  skiplist.c  sp_tree.c  tr_tree.c  tree_common.c  tree_common.h  wb_tree.c
